@@ -81,12 +81,18 @@ protected:
 	ULONG_PTR gdiplusToken;
 };
 
+static const int kUTFStringBufferSize = 128;
+
 class UTF8StringHelper
 {
 public:
 	UTF8StringHelper (const char* utf8Str) : utf8Str (utf8Str), allocWideStr (0), allocStrIsWide (true) {}
 	UTF8StringHelper (const WCHAR* wideStr) : wideStr (wideStr), allocUTF8Str (0), allocStrIsWide (false) {}
-	~UTF8StringHelper () { if (allocUTF8Str) ::free (allocUTF8Str); }
+	~UTF8StringHelper ()
+	{
+		if (allocUTF8Str && allocUTF8Str != buffer)
+			::free (allocUTF8Str);
+	}
 
 	operator const char* () { return getUTF8String (); }
 	operator const WCHAR*() { return getWideString (); }
@@ -100,7 +106,14 @@ public:
 			if (!allocWideStr && utf8Str)
 			{
 				int numChars = MultiByteToWideChar (CP_UTF8, 0, utf8Str, -1, 0, 0);
-				allocWideStr = (WCHAR*)::malloc ((numChars+1)*2);
+				if ((numChars+1)*2 < kUTFStringBufferSize)
+				{
+					allocWideStr = (WCHAR*)buffer;
+				}
+				else
+				{
+					allocWideStr = (WCHAR*)::malloc ((numChars+1)*2);
+				}
 				if (MultiByteToWideChar (CP_UTF8, 0, utf8Str, -1, allocWideStr, numChars) == 0)
 				{
 					allocWideStr[0] = 0;
@@ -118,7 +131,14 @@ public:
 			if (!allocUTF8Str && wideStr)
 			{
 				int allocSize = WideCharToMultiByte (CP_UTF8, 0, wideStr, -1, 0, 0, 0, 0);
-				allocUTF8Str = (char*)::malloc (allocSize+1);
+				if (allocSize < kUTFStringBufferSize)
+				{
+					allocUTF8Str = buffer;
+				}
+				else
+				{
+					allocUTF8Str = (char*)::malloc (allocSize+1);
+				}
 				if (WideCharToMultiByte (CP_UTF8, 0, wideStr, -1, allocUTF8Str, allocSize, 0, 0) == 0)
 				{
 					allocUTF8Str[0] = 0;
@@ -138,6 +158,7 @@ protected:
 	};
 
 	bool allocStrIsWide;
+	char buffer[kUTFStringBufferSize];
 };
 
 class ResourceStream : public IStream
